<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"
        android:text="@string/received_messages" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/app_name" />

    <Button
        android:id="@+id/message1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="60dp"
        android:enabled="false"
        android:text="@string/send_message1" />

    <Button
        android:id="@+id/message2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="50dp"
        android:layout_marginRight="60dp"
        android:enabled="false"
        android:text="@string/send_message2" />

    <Button
        android:id="@+id/syncButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="60dp"
        android:enabled="false"
        android:text="@string/sync_button" />

    <Button
        android:id="@+id/selectButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="100dp"
        android:layout_marginRight="60dp"
        android:enabled="false"
        android:text="@string/select_button" />
</FrameLayout>
